added comments about Jupyter markdown

--- a/JupyterPractice.ipynb
+++ b/JupyterPractice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,18 @@
     "ax.set_ylabel('y')\n",
     "ax.set_zlabel('z')\n",
     "ax.view_init(35, -65)\n",
+    "\n",
+    "# You can also insert markdown or Latex. For inline code, click 'Markdown' and \n",
+    "# start and end each line with a dollar sign '$'\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$ y = mx+b $"
    ]
   }
  ],
